[package]
name = "camp_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
tokio = { version = "1.28.2", features = ["full"] }
sysinfo = "0.29.2"
network-interface = "1.0.1"
serde = { version = "1.0.164", features = ["derive"] }
tower = "0.4.13"
clap = { version = "4.3.3", features = ["derive"] }
hyper = { version = "0.14.26", features = ["server"] }
serde_json = "1.0.64"

# Local paths
smithy_common = { path = "../../packages/smithy_common" }
camp_agent_client = { path = "../../packages/camp_agent_client" }
camp_local_rs = { path = "../../packages/camp_local_rs" }
camp_agent_server = { path = "../../packages/camp_agent_server" }
hw_info = { path = "../../packages/hw_info" }
containers = { path = "../../packages/containers" }
aws-smithy-http-server = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-http-server/", features = ["request-id"] }
aws-smithy-runtime = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-runtime/" }
aws-smithy-client = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-client/", features = ["rustls"] }
aws-smithy-http = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-http/" }
aws-smithy-types = { path = "/home/awlsring/Code/smithy-rs/rust-runtime/aws-smithy-types/" }
pin-project-lite = "0.2.9"
futures-util = "0.3.28"
http = "0.2.9"
http-body = "0.4.5"
toml = "0.8.0"
log = "0.4.19"
env_logger = "0.10.0"
daemonize = "0.5.0"
whoami = "1.4.0"
async-stream = "0.3.5"
futures = "0.3.28"
